--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,9 @@
   </header>
   <main>
     <div class="container">
-
+          <div class="loading-element">
+            <img src="src/img/45.svg" alt="">
+          </div>
           <div class="result-container"></div>        
     </div>
   </main>
